infra/k8s/30-transaction-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: risk-signal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-api
  template:
    metadata:
      labels:
        app: transaction-api
    spec:
      containers:
        - name: transaction-api
          image: risk-signal-transaction-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-api
  namespace: risk-signal
spec:
  selector:
    app: transaction-api
  ports:
    - port: 8081
      targetPort: 8081
