infra/k8s/31-risk-scoring-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-scoring-service
  namespace: risk-signal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: risk-scoring-service
  template:
    metadata:
      labels:
        app: risk-scoring-service
    spec:
      containers:
        - name: risk-scoring-service
          image: risk-signal-risk-scoring-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: risk-scoring-service
  namespace: risk-signal
spec:
  selector:
    app: risk-scoring-service
  ports:
    - port: 8082
      targetPort: 8082
